--- a/calendar_more.html
+++ b/calendar_more.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="../twtcnangang/css/main.css">
-    <link rel="stylesheet" href="../twtcnangang/bower_components/mdi/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="bower_components/mdi/css/materialdesignicons.min.css">
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
-    <link href="../twtcnangang/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="dist/js/jquery-3.2.1.min.js"></script>
     <title></title>
 </head>
