--- a/conference-service-electricity.html
+++ b/conference-service-electricity.html
@@ -20,7 +20,7 @@
             <div id="id_header">
                 <div class="header_bg">
                     <div class="logo">
-                        <img src="images/logo.svg">
+                        <a href="index.html"><img src="images/logo.svg"></a>
                     </div>
                     <nav>
                         <div class="search_Bg_menu"><img src="images/menu.svg"></div>
@@ -29,42 +29,42 @@
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon01.svg"></li>
-                                    <li><a href="#">最新消息</a></li>
+                                    <li><a href="news.html">最新消息</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon02.svg"></li>
-                                    <li><a href="#">展館介紹</a></li>
+                                    <li><a href="aboutus.html">展館介紹</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon03.svg"></li>
-                                    <li><a href="#">租借場地</a></li>
+                                    <li><a href="organizers.html">租借場地</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon04.svg"></li>
-                                    <li><a href="#">展會活動</a></li>
+                                    <li><a href="calendar.html">展會活動</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon05.svg"></li>
-                                    <li><a href="#">參觀資訊</a></li>
+                                    <li><a href="visitors2.html">參觀資訊</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon06.svg"></li>
-                                    <li><a href="#">交通資訊</a></li>
+                                    <li><a href="transportation1.html">交通資訊</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
@@ -114,12 +114,12 @@
             <div class="orang_wrapper">
                 <div class="orang_tab">
                     <ul>
-                        <li class="active">會議設備</li>
-                        <li>會議茶點</li>
-                        <li>其他空間</li>
-                        <li>廣告點位</li>
-                        <li>電信服務</li>
-                        <li>用電申請</li>
+                        <a href="conference-service-equipment.html"><li>會議設備</li></a>
+                        <a href="conference-service.html"><li>會議茶點</li></a>
+                        <a href="#"><li>其他空間</li></a>
+                        <a href="advertisements_ad.html"><li>廣告點位</li></a>
+                        <a href="telecommunications.html"><li>電信服務</li></a>
+                        <a href="conference-service-electricity.html"><li class="active">用電申請</li></a>
                     </ul>
                 </div>
 
