--- a/event_item3.html
+++ b/event_item3.html
@@ -20,7 +20,7 @@
             <div id="id_header">
                 <div class="header_bg">
                     <div class="logo">
-                        <img src="images/logo.svg">
+                        <a href="index.html"><img src="images/logo.svg"></a>
                     </div>
                     <nav>
                         <div class="search_Bg_menu"><img src="images/menu.svg"></div>
@@ -29,42 +29,42 @@
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon01.svg"></li>
-                                    <li><a href="#">最新消息</a></li>
+                                    <li><a href="news.html">最新消息</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon02.svg"></li>
-                                    <li><a href="#">展館介紹</a></li>
+                                    <li><a href="aboutus.html">展館介紹</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon03.svg"></li>
-                                    <li><a href="#">租借場地</a></li>
+                                    <li><a href="organizers.html">租借場地</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon04.svg"></li>
-                                    <li><a href="#">展會活動</a></li>
+                                    <li><a href="calendar.html">展會活動</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon05.svg"></li>
-                                    <li><a href="#">參觀資訊</a></li>
+                                    <li><a href="visitors2.html">參觀資訊</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon06.svg"></li>
-                                    <li><a href="#">交通資訊</a></li>
+                                    <li><a href="transportation1.html">交通資訊</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
@@ -114,14 +114,14 @@
             <div class="orang_wrapper">
                 <div class="orang_tab">
                     <ul>
-                        <li>申請流程</li>
-                        <li>場租試算</li>
-                        <li class="active">展場線上洽詢</li>
-                        <li>其他空間配套</li>
-                        <li>吊點</li>
-                        <li>臨時廣告物刊登</li>
-                        <li>活動剪影</li>
-                        <li>展場</li>
+                        <a href="event_item1.html"><li>申請流程</li></a>
+                        <a href="event_item2.html"><li>場租試算</li></a>
+                        <a href="event_item3.html"><li class="active">展場線上洽詢</li></a>
+                        <a href="#"><li>其他空間配套</li></a>
+                        <a href="event_item5.html"><li>吊點</li></a>
+                        <a href="advertisements_ad.html"><li>臨時廣告物刊登</li></a>
+                        <a href="event_item7.html"><li>活動剪影</li></a>
+                        <a href="#"><li>展場</li></a>
                     </ul>
                 </div>
                 <div class="event_wrap">
