--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <div id="id_header">
                 <div class="header_bg">
                     <div class="logo">
-                        <img src="images/logo.svg">
+                        <a href="index.html"><a href="index.html"><img src="images/logo.svg"></a></a>
                     </div>
                     <nav>
-                        <div class="search_Bg_menu"><img src="images/menu.svg"></div>
-                        <div class="search_Bg"><i class="mdi mdi-magnify"></i></div>
+                        <a href="#"><div class="search_Bg_menu"><img src="images/menu.svg"></div></a>
+                        <a href="#"><div class="search_Bg"><i class="mdi mdi-magnify"></i></div></a>
                         <div class="rightBox">
                             <div class="listitem">
                                 <ul>
@@ -36,7 +36,7 @@
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon02.svg"></li>
-                                    <li><a href="#">展館介紹</a></li>
+                                    <li><a href="aboutus.html">展館介紹</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
@@ -57,7 +57,7 @@
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon05.svg"></li>
-                                    <li><a href="#">參觀資訊</a></li>
+                                    <li><a href="visitors2.html">參觀資訊</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
