--- a/aboutus6.html
+++ b/aboutus6.html
@@ -20,7 +20,7 @@
             <div id="id_header">
                 <div class="header_bg">
                     <div class="logo">
-                        <img src="images/logo.svg">
+                        <a href="index.html"><img src="images/logo.svg"></a>
                     </div>
                     <nav>
                         <div class="search_Bg_menu"><img src="images/menu.svg"></div>
@@ -29,42 +29,42 @@
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon01.svg"></li>
-                                    <li><a href="#">最新消息</a></li>
+                                    <li><a href="news.html">最新消息</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon02.svg"></li>
-                                    <li><a href="#">展館介紹</a></li>
+                                    <li><a href="aboutus.html">展館介紹</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon03.svg"></li>
-                                    <li><a href="#">租借場地</a></li>
+                                    <li><a href="organizers.html">租借場地</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon04.svg"></li>
-                                    <li><a href="#">展會活動</a></li>
+                                    <li><a href="calendar.html">展會活動</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon05.svg"></li>
-                                    <li><a href="#">參觀資訊</a></li>
+                                    <li><a href="visitors2.html">參觀資訊</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon06.svg"></li>
-                                    <li><a href="#">交通資訊</a></li>
+                                    <li><a href="transportation1.html">交通資訊</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
@@ -112,15 +112,15 @@
             <div class="orang_wrapper">
                 <div class="orang_tab">
                     <ul>
-                        <li>內部實景</li>
-                        <li>展館位置</li>
-                        <li>關於展館</li>
-                        <li>綠色展館</li>
-                        <li>公共藝術</li>
-                        <li class="active">ISO 20121</li>
-                        <li>經營者</li>
-                        <li>展館剪影</li>
-                        <li>聯絡我們</li>
+                        <a href="aboutus.html"><li>內部實景</li></a>
+                        <a href="aboutus2.html"><li>展館位置</li></a>
+                        <a href="aboutus3.html"><li>關於展館</li></a>
+                        <a href="aboutus4.html"><li>綠色展館</li></a>
+                        <a href="aboutus5.html"><li>公共藝術</li></a>
+                        <a href="aboutus6.html"><li class="active">ISO 20121</li></a>
+                        <a href="aboutus7.html"><li>經營者</li></a>
+                        <a href="aboutus8.html"><li>展館剪影</li></a>
+                        <a href="aboutus9.html"><li>聯絡我們</li></a>
                     </ul>
                 </div>
 
