--- a/hall2_application.html
+++ b/hall2_application.html
@@ -20,7 +20,7 @@
             <div id="id_header">
                 <div class="header_bg">
                     <div class="logo">
-                        <img src="images/logo.svg">
+                        <a href="index.html"><img src="images/logo.svg"></a>
                     </div>
                     <nav>
                         <div class="search_Bg_menu"><img src="images/menu.svg"></div>
@@ -29,42 +29,42 @@
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon01.svg"></li>
-                                    <li><a href="#">最新消息</a></li>
+                                    <li><a href="news.html">最新消息</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon02.svg"></li>
-                                    <li><a href="#">展館介紹</a></li>
+                                    <li><a href="aboutus.html">展館介紹</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon03.svg"></li>
-                                    <li><a href="#">租借場地</a></li>
+                                    <li><a href="organizers.html">租借場地</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon04.svg"></li>
-                                    <li><a href="#">展會活動</a></li>
+                                    <li><a href="calendar.html">展會活動</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon05.svg"></li>
-                                    <li><a href="#">參觀資訊</a></li>
+                                    <li><a href="visitors2.html">參觀資訊</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon06.svg"></li>
-                                    <li><a href="#">交通資訊</a></li>
+                                    <li><a href="transportation1.html">交通資訊</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
@@ -114,9 +114,9 @@
             <div class="orang_wrapper">
                 <div class="orang_tab">
                     <ul>
-                        <li class="active">展覽申請</li>
-                        <li>基本資訊</li>
-                        <li>平面圖</li>
+                        <a href="hall2_application.html"><li class="active">展覽申請</li></a>
+                        <a href="hall2.html"><li>基本資訊</li></a>
+                        <a href="hall2_spaceview.html"><li>平面圖</li></a>
                     </ul>
                 </div>
 
