--- a/public_space.html
+++ b/public_space.html
@@ -20,7 +20,7 @@
             <div id="id_header">
                 <div class="header_bg">
                     <div class="logo">
-                        <img src="images/logo.svg">
+                        <a href="index.html"><img src="images/logo.svg"></a>
                     </div>
                     <nav>
                         <div class="search_Bg_menu"><img src="images/menu.svg"></div>
@@ -29,42 +29,42 @@
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon01.svg"></li>
-                                    <li><a href="#">最新消息</a></li>
+                                    <li><a href="news.html">最新消息</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon02.svg"></li>
-                                    <li><a href="#">展館介紹</a></li>
+                                    <li><a href="aboutus.html">展館介紹</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon03.svg"></li>
-                                    <li><a href="#">租借場地</a></li>
+                                    <li><a href="organizers.html">租借場地</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon04.svg"></li>
-                                    <li><a href="#">展會活動</a></li>
+                                    <li><a href="calendar.html">展會活動</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon05.svg"></li>
-                                    <li><a href="#">參觀資訊</a></li>
+                                    <li><a href="visitors2.html">參觀資訊</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon06.svg"></li>
-                                    <li><a href="#">交通資訊</a></li>
+                                    <li><a href="transportation1.html">交通資訊</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
@@ -113,9 +113,9 @@
 
                 <div class="orang_tab">
                     <ul>
-                        <li class="active">洽詢公共空間</li>
-                        <li>收費基準</li>
-                        <li>公共空間一覽</li>
+                        <a href="public_space.html"><li class="active">洽詢公共空間</li></a>
+                        <a href="public_space2.html"><li>收費基準</li></a>
+                        <a href="public_space3.html"><li>公共空間一覽</li></a>
                     </ul>
                 </div>
                 <div class="news_continer">
