--- a/visitors8.html
+++ b/visitors8.html
@@ -20,7 +20,7 @@
             <div id="id_header">
                 <div class="header_bg">
                     <div class="logo">
-                        <img src="images/logo.svg">
+                        <a href="index.html"><img src="images/logo.svg"></a>
                     </div>
                     <nav>
                         <div class="search_Bg_menu"><img src="images/menu.svg"></div>
@@ -29,42 +29,42 @@
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon01.svg"></li>
-                                    <li><a href="#">最新消息</a></li>
+                                    <li><a href="news.html">最新消息</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon02.svg"></li>
-                                    <li><a href="#">展館介紹</a></li>
+                                    <li><a href="aboutus.html">展館介紹</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon03.svg"></li>
-                                    <li><a href="#">租借場地</a></li>
+                                    <li><a href="organizers.html">租借場地</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon04.svg"></li>
-                                    <li><a href="#">展會活動</a></li>
+                                    <li><a href="calendar.html">展會活動</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon05.svg"></li>
-                                    <li><a href="#">參觀資訊</a></li>
+                                    <li><a href="visitors2.html">參觀資訊</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
                             <div class="listitem">
                                 <ul>
                                     <li><img src="images/icon06.svg"></li>
-                                    <li><a href="#">交通資訊</a></li>
+                                    <li><a href="transportation1.html">交通資訊</a></li>
                                 </ul>
                             </div>
                             <div class="listline"></div>
@@ -112,15 +112,15 @@
             <div class="orang_wrapper">
                 <div class="orang_tab">
                     <ul>
-                        <li>交通資訊</li>
-                        <li>平面位置</li>
-                        <li>公共設施</li>
-                        <li>Free Wi-Fi</li>
-                        <li>餐飲服務</li>
-                        <li>展覽申請</li>
-                        <li>住宿資訊</li>
-                        <li>外幣兌換與快遞服務</li>
-                        <li class="active">免費行動數位閱讀</li>
+                        <a href="transportation1.html"><li>交通資訊</li></a>
+                        <a href="visitors2.html"><li>平面位置</li></a>
+                        <a href="visitors3.html"><li>公共設施</li></a>
+                        <a href="visitors4.html"><li>Free Wi-Fi</li></a>
+                        <a href="food.html"><li>餐飲服務</li></a>
+                        <a href="organizers_item6.html"><li>展覽申請</li></a>
+                        <a href="visitors6.html"><li>住宿資訊</li></a>
+                        <a href="visitors7.html"><li>外幣兌換與快遞服務</li></a>
+                        <a href="visitors8.html"><li class="active">免費行動數位閱讀</li></a>
                     </ul>
                 </div>
                 <div class="safety_article">
