--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <div class="ento_wrapper">
                         <div class="ento_item">
                             <div class="spotList skell_left sk_blue01">
-                                <a href="#">
+                                <a href="organizers.html">
                                     <ul class="ul_skell">
                                         <li><img src="images/ke_01.svg"></li>
                                         <li>租借場地</li>
@@ -124,7 +124,7 @@
                                 </a>
                             </div>
                             <div class="spotList skell_right sk_blue02">
-                                <a href="#">
+                                <a href="aboutus.html">
                                     <ul class="ul_skell_right">
                                         <li><img src="images/ke_02.svg"></li>
                                         <li>展館介紹</li>
@@ -132,7 +132,7 @@
                                 </a>
                             </div>
                             <div class="spotList skell_left sk_blue03">
-                                <a href="#">
+                                <a href="calendar.html">
                                     <ul class="ul_skell">
                                         <li><img src="images/ke_03.svg"></li>
                                         <li>展會活動</li>
@@ -140,7 +140,7 @@
                                 </a>
                             </div>
                             <div class="spotList skell_right sk_blue04">
-                                <a href="#">
+                                <a href="visitors2.html">
                                     <ul class="ul_skell_right">
                                         <li><img src="images/ke_04.svg"></li>
                                         <li>參觀資訊</li>
@@ -156,7 +156,7 @@
                                 </a>
                             </div>
                             <div class="spotList skell_right sk_blue06">
-                                <a href="#">
+                                <a href="transportation1.html">
                                     <ul class="ul_skell_right">
                                         <li><img src="images/ke_05.svg"></li>
                                         <li>交通資訊</li>
@@ -181,19 +181,19 @@
                         <div class="rentpace">
                             <div class="pace_box">
                                 <div class="pacd_tab">展場租借</div>
-                                <div class="pace_pic"><a href="#"><img src="images/pace.jpg"></a></div>
+                                <div class="pace_pic"><a href="organizers_item1.html"><img src="images/pace.jpg"></a></div>
                             </div>
                             <div class="pace_box">
                                 <div class="pacd_tab">會議室租借</div>
-                                <div class="pace_pic"><a href="#"><img src="images/pace2.jpg"></a></div>
+                                <div class="pace_pic"><a href="conference-room.html"><img src="images/pace2.jpg"></a></div>
                             </div>
                             <div class="pace_box">
                                 <div class="pacd_tab">公共空間租借</div>
-                                <div class="pace_pic"><a href="#"><img src="images/pace3.jpg"></a></div>
+                                <div class="pace_pic"><a href="public_space.html"><img src="images/pace3.jpg"></a></div>
                             </div>
                             <div class="pace_box">
                                 <div class="pacd_tab">廣告刊登</div>
-                                <div class="pace_pic"><a href="#"><img src="images/pace4.jpg"></a></div>
+                                <div class="pace_pic"><a href="advertisements_ad.html"><img src="images/pace4.jpg"></a></div>
                             </div>
                         </div>
                     </div>
@@ -245,7 +245,7 @@
                             <div class="tra_contin">
                                 <div class="mrt_box">
                                     <div class="traffic_big_title">交通資訊</div>
-                                    <a href="#">
+                                    <a href="transportation4.html">
                                         <div class="ubike_btn">
                                             <ul>
                                                 <li><img src="images/bus.svg"></li>
@@ -253,7 +253,7 @@
                                             </ul>
                                         </div>
                                     </a>
-                                    <a href="#">
+                                    <a href="transportation7.html">
                                         <div class="ubike_btn">
                                             <ul>
                                                 <li><img src="images/bus2.svg"></li>
@@ -261,7 +261,7 @@
                                             </ul>
                                         </div>
                                     </a>
-                                    <a href="#">
+                                    <a href="transportation3.html">
                                         <div class="ubike_btn">
                                             <ul>
                                                 <li><img src="images/bus3.svg"></li>
@@ -269,8 +269,8 @@
                                             </ul>
                                         </div>
                                     </a>
-                                    <a href="#">
-                                        <div class="ubike_btn">
+                                    <a href="transportation5.html">
+                                        <div class="transportation5.html">
                                             <ul>
                                                 <li><img src="images/bus4.svg"></li>
                                                 <li>高鐵</li>
