--- a/news.html
+++ b/news.html
@@ -128,7 +128,7 @@
                                 </div>
                             <div class="card_title">2018 外貿協會新進人員招考 Come on a journey with us!</div>
                             </div>
-                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="#">繼續閱讀</a></div>
+                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="news_more.html">繼續閱讀</a></div>
                         </div>
                         <div class="card-box">
                             <div class="card_vrte">
@@ -136,7 +136,7 @@
                                 <div class="card_date">2018.08.03</div>
                                 <div class="card_title">2018 外貿協會新進人員招考 Come on a journey with us!</div>
                             </div>
-                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="#">繼續閱讀</a></div>
+                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="news_more.html">繼續閱讀</a></div>
                         </div>
                         <div class="card-box">
                             <div class="card_vrte">
@@ -144,7 +144,7 @@
                                 <div class="card_date">2018.08.03</div>
                                 <div class="card_title">2018 外貿協會新進人員招考 Come on a journey with us!</div>
                             </div>
-                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="#">繼續閱讀</a></div>
+                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="news_more.html">繼續閱讀</a></div>
                         </div>
                         <div class="card-box">
                             <div class="card_vrte">
@@ -152,7 +152,7 @@
                                 <div class="card_date">2018.08.03</div>
                                 <div class="card_title">2018 外貿協會新進人員招考 Come on a journey with us!</div>
                             </div>
-                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="#">繼續閱讀</a></div>
+                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="news_more.html">繼續閱讀</a></div>
                         </div>
                         <div class="card-box">
                             <div class="card_vrte">
@@ -160,7 +160,7 @@
                                 <div class="card_date">2018.08.03</div>
                                 <div class="card_title">2018 外貿協會新進人員招考 Come on a journey with us!</div>
                             </div>
-                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="#">繼續閱讀</a></div>
+                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="news_more.html">繼續閱讀</a></div>
                         </div>
                         <div class="card-box">
                             <div class="card_vrte">
@@ -168,7 +168,7 @@
                                 <div class="card_date">2018.08.03</div>
                                 <div class="card_title">2018 外貿協會新進人員招考 Come on a journey with us!</div>
                             </div>
-                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="#">繼續閱讀</a></div>
+                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="news_more.html">繼續閱讀</a></div>
                         </div>
                         <div class="card-box">
                             <div class="card_vrte">
@@ -176,7 +176,7 @@
                                 <div class="card_date">2018.08.03</div>
                                 <div class="card_title">2018 外貿協會新進人員招考 Come on a journey with us!</div>
                             </div>
-                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="#">繼續閱讀</a></div>
+                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="news_more.html">繼續閱讀</a></div>
                         </div>
                         <div class="card-box">
                             <div class="card_vrte">
@@ -184,7 +184,7 @@
                                 <div class="card_date">2018.08.03</div>
                                 <div class="card_title">2018 外貿協會新進人員招考 Come on a journey with us!</div>
                             </div>
-                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="#">繼續閱讀</a></div>
+                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="news_more.html">繼續閱讀</a></div>
                         </div>
                         <div class="card-box">
                             <div class="card_vrte">
@@ -192,7 +192,7 @@
                                 <div class="card_date">2018.08.03</div>
                                 <div class="card_title">2018 外貿協會新進人員招考 Come on a journey with us!</div>
                             </div>
-                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="#">繼續閱讀</a></div>
+                            <div class="card_issuse">200坪至1,058坪的多元選擇，交通便捷的地理位置，東區門戶計畫的新亮點...<a href="news_more.html">繼續閱讀</a></div>
                         </div>
 
 
