--- a/index.html
+++ b/index.html
@@ -215,21 +215,21 @@
                             </div> -->
                             <div class="newlist_box">
                                 <div class="newnew"><i class="mdi mdi-facebook-box"></i> 2018.02.03</div>
-                                <div class="newnew"><a href="#">「ITI ENGLISH」英文線上學習頻道預計在5月於外貿協會培訓中心官方YouTube...<i class="mdi mdi-arrow-right"></i></a></div>
+                                <div class="newnew"><a href="news_more.html">「ITI ENGLISH」英文線上學習頻道預計在5月於外貿協會培訓中心官方YouTube...<i class="mdi mdi-arrow-right"></i></a></div>
                             </div>
                             <div class="new_line"></div>
                             <div class="newlist_box">
                                 <div class="newnew"><i class="mdi mdi-facebook-box"></i> 2018.02.03</div>
-                                <div class="newnew"><a href="#">南港展覽館1館停車場停車費率將自本(107)年3月1日起調整<i class="mdi mdi-arrow-right"></i></a></div>
+                                <div class="newnew"><a href="news_more.html">南港展覽館1館停車場停車費率將自本(107)年3月1日起調整<i class="mdi mdi-arrow-right"></i></a></div>
                             </div>
                             <div class="new_line"></div>
                             <div class="newlist_box">
                                 <div class="newnew"><i class="mdi mdi-facebook-box"></i> 2018.02.03</div>
-                                <div class="newnew"><a href="#">你，跟上了嗎?外貿協會招考名額近年最高 4/11最後報名日!<i class="mdi mdi-arrow-right"></i></a></div>
+                                <div class="newnew"><a href="news_more.html">你，跟上了嗎?外貿協會招考名額近年最高 4/11最後報名日!<i class="mdi mdi-arrow-right"></i></a></div>
                             </div>
 
                             <div class="nwmore_btn">
-                                <a href="#">
+                                <a href="news.html">
                                     <div class="new_readmore">。。。</div>
                                 </a>
                             </div>
